--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
             </tr>
             <tr>
               <td class="nutritional">Carbs</td>
-              <td>0g</td>
+              <td class="values">0g</td>
             </tr>
             <tr>
-              <td>Protein</td>
-              <td>20g</td>
+              <td class="nutritional">Protein</td>
+              <td class="values">20g</td>
             </tr>
             <tr>
-              <td>Fat</td>
-              <td>22g</td>
+              <td class="nutritional__fat">Fat</td>
+              <td class="values__fat">22g</td>
             </tr>
           </tbody>
         </table>
